--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -20,5 +20,8 @@
     "solidity-coverage": "0.8.2",
     "ts-node": "^10.9.2",
     "typechain": "8.1.1"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.0.1"
   }
 }
