add #1 ERC721 Contract 基盤実装

--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "test": "npx hardhat test"
+    "run:script": "npx hardhat run scripts/run.ts",
+    "test": "npx hardhat test",
+    "deploy": "npx hardhat run scripts/deploy.ts --network sepolia",
+    "deploy:localhost": "npx hardhat run scripts/deploy.ts --network localhost",
+    "start": "npx hardhat node"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "1.0.6",
@@ -15,7 +19,7 @@
     "@typechain/hardhat": "6.1.5",
     "chai": "4.3.7",
     "ethers": "5.4",
-    "hardhat": "2.18.1",
+    "hardhat": "2.19.4",
     "hardhat-gas-reporter": "1.0.9",
     "solidity-coverage": "0.8.2",
     "ts-node": "^10.9.2",
