--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.15.16",
+    "@types/three": "^0.161.2",
     "eslint-config-prettier": "^9.1.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "three": "^0.161.0"
   },
   "devDependencies": {
     "@types/node": "^20",
